# IndexTools

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.md  CHANGES.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build.py  pyproject.toml  requirements-test.txt
benchmarks/intervals/: __init__.py  cgranges.py  interlap.py  ncls.py  pyranges.py  quicksect.py  test_intervals.py
docker/: Dockerfile
docs/: Development-Getting-Started.md
docs/presentations/: plots.R
idxtools/: bed.py  index.py  intervals.py
idxtools/console/: __init__.py  commands.py  features.py  partition.py  split.py
indextools/: bed.py  index.py  intervals.py  regions.py  utils.py
indextools/console/: __init__.py  cnv.py  commands.py  features.py  partition.py  split.py
paper/: .Rhistory  README.md  benchmark.py  data.txt  data_files.json  gatk_benchmark.wdl  inputs.dx.json  inputs.dx.template.json  inputs.json  inputs.tx.template.json  requirements.txt
paper/beds/: README.md  split_on_Ns.bed  split_windows_1Mb.bed
paper/data/beds/: HG002.GRCh38.2x250.indextools.bed  README.md  split_on_chr.bed  split_windows_50Mb.bed
paper/data/targets/ExomeSureSelectv05/: liftover.sh
paper/data/targets/TruSight170/: liftover.sh
paper/gatk/: Dockerfile  gatk.wdl  htslib.dockerfile
paper/presentations/: plots.R
paper/results/: other.json  targeted.json  whole.json
paper/samtools/: bulk_rna_addreplacerg_inputs.json  samtools_bam2fastq.wdl  targeted_rna_addreplacerg_inputs.json
paper/workflow/: benchmark.py  data_files.json  gatk_benchmark.wdl  inputs.dx.template.json
paper/workflow/gatk/: gatk.wdl
paper/workflow/samtools/: exome_bam2fastq_inputs.json  samtools_addreplacerg.wdl
tests/: __init__.py  conftest.py  test_index.py  test_integration_partition.py  test_intervals.py  test_regions.py
tests/data/: small.bam  small.bam.bai
tests/input_data/: contig_sizes.txt
tests/tests.test_integration_partition/test_partition_index_w_contigs/: small_partitions.bed
