[tool.poetry]
name = "indextools"
version = "0.1.2"
description = "A toolkit for accelerating genomics using index files."
license = "MIT"
authors = ["John Didion <jdidion@dnanexus.com>"]
readme = "README.md"
homepage = "https://github.com/dnanexus/indextools"
repository = "https://github.com/dnanexus/indextools.git"
classifiers = ["Development Status :: 4 - Beta"]
include = [
  "AUTHORS.md",
  "CHANGES.md",
]

[tool.poetry.dependencies]
python = "^3.6"
autoclick = "^0.6.0"
ngsindex = "^0.1.7"
pysam = "^0.15"
xphyle = "^4.0.8"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-cov = "^2.7"
black = {version = "^19.3b0",allows-prereleases = true}
pytest-datadir-ng = "^1.1"

[tool.poetry.extras]
jinja2 = ["jinja2"]

[tool.poetry.scripts]
indextools = "indextools.console:indextools"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
