[tool.poetry]
name = "indextools"
version = "0.1.4"
description = "A toolkit for accelerating genomics using index files."
license = "MIT"
authors = ["John Didion <jdidion@dnanexus.com>"]
readme = "README.md"
homepage = "https://github.com/dnanexus/indextools"
repository = "https://github.com/dnanexus/indextools.git"
classifiers = ["Development Status :: 4 - Beta"]
build = "build.py"
packages = [
  {include = "indextools"},
  {include = "cgranges"}
]
include = [
  "AUTHORS.md",
  "CHANGES.md"
]

[tool.poetry.dependencies]
python = "^3.6"
autoclick = "^0.6.1"
loguru = "^0.3.2"
ngsindex = "^0.1.7"
pysam = "^0.15"
xphyle = "^4.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0", allows-prereleases = true}
coverage = "^4.5.4"
cython = "^0.29.13"
pytest = "^4.0"
pytest-datadir-ng = "^1.1"

[tool.poetry.extras]
jinja2 = ["jinja2"]

[tool.poetry.scripts]
indextools = "indextools.console:indextools"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
